--- a/desertgala.html
+++ b/desertgala.html
@@ -18,7 +18,7 @@
     <div class="max-w-7xl mx-auto flex justify-between items-center">
       <h1 class="text-3xl font-bold text-white">8 EVENTS</h1>
       <div class="space-x-6">
-        <a href="index.html" class="hover:text-gray-400">Portfolio</a>
+        <a href="index.html" class="hover:text-gray-400">Home</a>
         <a href="#" class="hover:text-gray-400">About</a>
         <a href="#" class="hover:text-gray-400">Contact</a>
       </div>
