--- a/yacht.html
+++ b/yacht.html
@@ -18,7 +18,7 @@
     <div class="max-w-7xl mx-auto flex justify-between items-center">
       <h1 class="text-3xl font-bold text-white">8 EVENTS</h1>
       <div class="space-x-6">
-        <a href="index.html" class="hover:text-gray-400">Portfolio</a>
+        <a href="index.html" class="hover:text-gray-400">Home</a>
         <a href="#" class="hover:text-gray-400">About</a>
         <a href="#" class="hover:text-gray-400">Contact</a>
       </div>
@@ -52,14 +52,7 @@
     </ul>
   </section>
 
-  <!-- Booking CTA -->
-  <section class="bg-neutral-900 py-10">
-    <div class="max-w-4xl mx-auto px-4 text-center">
-      <h3 class="text-3xl font-bold mb-4">Reserve Your Spot on the Yacht</h3>
-      <p class="text-gray-400 mb-6">Celebrate in style aboard Dubai's most glamorous floating venue.</p>
-      <a href="#" class="inline-block px-8 py-3 bg-yellow-500 text-black font-semibold rounded-full hover:bg-yellow-400 transition">Book Now</a>
-    </div>
-  </section>
+  
 
   <!-- Footer -->
   <footer class="bg-black border-t border-gray-800 py-6 text-center text-gray-400">
