--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ We specialize in designing custom fireworks experiences for all types of occasio
   </div>
 </a>
 
-<a href="Yacht.html" class="block bg-neutral-900 rounded-xl shadow-lg hover:scale-105 transform transition overflow-hidden">
+<a href="yacht.html" class="block bg-neutral-900 rounded-xl shadow-lg hover:scale-105 transform transition overflow-hidden">
   <div class="aspect-video overflow-hidden">
     <img src="https://media-cdn.tripadvisor.com/media/attractions-splice-spp-674x446/12/41/b0/72.jpg" alt="Yacht Party" class="w-full h-full object-cover">
   </div>
