--- a/login.html
+++ b/login.html
@@ -2,45 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Register</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-cover bg-center bg-no-repeat flex items-center justify-center min-h-screen" style="background-image: url('https://images.unsplash.com/photo-1682686580391-615b1f28e5ee?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+<body class="bg-cover bg-center bg-no-repeat flex items-center justify-center min-h-screen" style="background-image: url('https://tse1.mm.bing.net/th/id/OIP.gIQnDpyVuPiTmM0bvu5yCQHaEo?pid=Api&P=0&h=180');">
 
-  <div class="bg-black bg-opacity-70 backdrop-blur-md p-8 rounded-xl shadow-lg w-full max-w-md">
-    <h2 class="text-3xl font-extrabold mb-6 text-center text-indigo-400 drop-shadow">
-      Create Your Account
-    </h2>
+  <div class="bg-black bg-opacity-70 backdrop-blur-md p-8 rounded shadow-md w-full max-w-md">
+    <h2 class="text-2xl font-bold mb-6 text-center text-indigo-400">Login to Your Account</h2>
 
     <form action="#" method="POST" class="space-y-4">
-      <input type="text" placeholder="Username"
-        class="w-full px-4 py-2 border border-gray-300 rounded-lg bg-white/80 focus:outline-none focus:ring-2 focus:ring-indigo-500" required />
+      <input type="email" placeholder="Email Address" class="w-full px-4 py-2 border rounded bg-white/80 text-black focus:outline-none focus:ring-2 focus:ring-indigo-500" required>
 
-      <input type="text" placeholder="Full Name"
-        class="w-full px-4 py-2 border border-gray-300 rounded-lg bg-white/80 focus:outline-none focus:ring-2 focus:ring-indigo-500" required />
+      <input type="password" placeholder="Password" class="w-full px-4 py-2 border rounded bg-white/80 text-black focus:outline-none focus:ring-2 focus:ring-indigo-500" required>
 
-      <input type="tel" placeholder="Phone Number"
-        class="w-full px-4 py-2 border border-gray-300 rounded-lg bg-white/80 focus:outline-none focus:ring-2 focus:ring-indigo-500" required />
-
-      <input type="email" placeholder="Email Address"
-        class="w-full px-4 py-2 border border-gray-300 rounded-lg bg-white/80 focus:outline-none focus:ring-2 focus:ring-indigo-500" required />
-
-      <input type="password" placeholder="Password"
-        class="w-full px-4 py-2 border border-gray-300 rounded-lg bg-white/80 focus:outline-none focus:ring-2 focus:ring-indigo-500" required />
-
-      <input type="password" placeholder="Confirm Password"
-        class="w-full px-4 py-2 border border-gray-300 rounded-lg bg-white/80 focus:outline-none focus:ring-2 focus:ring-indigo-500" required />
-
-      <button type="submit"
-        class="w-full bg-indigo-600 text-white font-semibold py-2 rounded-lg hover:bg-indigo-700 transition duration-300">
-        Register
+      <button type="submit" class="w-full bg-indigo-600 text-white font-semibold py-2 rounded hover:bg-indigo-700 transition">
+        Login
       </button>
     </form>
 
     <p class="mt-4 text-center text-gray-300">
-      Already have an account?
-      <a href="login.html" class="text-indigo-400 hover:underline">Login here</a>
+      Don't have an account?
+      <a href="reg.html" class="text-indigo-400 hover:underline">Register here</a>
     </p>
   </div>
 
